# mini-prophet

./: .gitignore  CHANGELOG.md  CHANGLOG.md  README.md  pyproject.toml
.github/workflows/: coverage.yml
.refactor_plans/: hands_off_stage_2.md  stage2.md
ai_prophet_integration/: README.md  __init__.py  predict.py  reformat.py
docs/: architecture.md  batch.md  cli.md  eval.md  extension.md
src/miniprophet/: __init__.py  exceptions.py
src/miniprophet/agent/: cli_agent.py  context.py  default.py  tui_agent.py
src/miniprophet/cli/: utils.py
src/miniprophet/config/: default.yaml
src/miniprophet/environment/: forecast_env.py  source_registry.py
src/miniprophet/eval/: __init__.py  agent_factory.py  agent_runtime.py  batch.py  cli.py  progress.py  runner.py  types.py
tests/: conftest.py  test_search.py
tests/agent/: test_context.py  test_default.py  test_grace_period.py  test_interactive_interrupt.py  test_trajectory.py
tests/cli/: test_utils.py
tests/config/: test_config.py
tests/environment/: test_forecast_env.py  test_source_board.py  test_source_registry.py
tests/eval/: test_agent_factory.py  test_agent_runtime.py  test_batch.py  test_cli.py  test_datasets_cli.py  test_progress.py  test_runner.py
tests/models/: test_init.py  test_litellm.py  test_litellm_response.py  test_live_apis.py  test_openrouter.py
tests/run/: test_set.py
tests/tools/: test_list_sources_tool.py  test_read_source_tool.py  test_search_tool.py  test_source_board_tools.py  test_submit.py
tests/utils/: test_log.py  test_metrics.py  test_serialize.py
(+53 files in other folders)
